Залил обновленный проект на сервер

--- a/src/index.html
+++ b/src/index.html
@@ -28,5 +28,144 @@
         <input type="submit" value="Мои работы">
     </div>
     </div>
+    <div class="about_me">
+        <div class="chapter"><h2>Обо мне</h2></div>
+        <img src="img/fotka.jpg">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapidus leo nec omare diam. Sed commodo nibh ante
+        <br>facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec omare diam commodo nibh.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapidus leo nec omare diam. Sed commodo nibh ante
+        <br>facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec omare diam commodo nibh.</p>
+        <br>
+        <input type="submit" value="Скачать резюме">
+    </div>
+    <div class="skills_background">
+        <div class="skills">
+            <div class="chapter"><h2>Что я умею</h2></div>
+                <table>
+                    <tr>
+                        <td><img src="img/laptop.png"></td>
+                        <td><img src="img/sign.png"></td>
+                        <td><img src="img/rocket.png"></td>
+                        <td><img src="img/Gram.png"></td>
+                    </tr>
+                    <tr>
+                        <td>Веб-дизайн</td>
+                        <td>Разработка</td>
+                        <td>CEO-Оптимизация</td>
+                        <td>Маркетинг</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor sit amet placerat
+                        <br>facilisis felis mi in tempus eleifend
+                        <br>pellentesque natoque etiam. </td>
+                        <td>Lorem ipsum dolor sit amet placerat
+                        <br>facilisis mi in tempus eleifend 
+                        <br>pellentesque.</td>
+                        <td>Lorem ipsum dolor sit amet placerat
+                        <br>facilisis felis mi in tempus eleifend
+                        <br>pellentesque natoque etiam.</td>
+                        <td>Lorem ipsum dolor sit amet placerat
+                        <br>facilisis felis mi in tempus eleifend
+                        <br>pellentesque natoque .</td>
+                    </tr>
+                </table>
+        </div>
+    </div>
+    <div class="case">
+        <div class="chapter"><h2>Кейсы</h2></div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed Dapibus leo nec ornare diamcoccodo nibh ante facilisis.</p>
+        <img src="img/fotka1.jpg">
+        <table>
+            <tr>
+                <td>CLIENT:</td>
+                <td>Название проекта</td>
+            </tr>
+            <tr>
+                <td>Какая-то компания
+                <br>WEBSITE:
+                <br>http://www.somedomain.com</td>
+                <td><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit., sed do eiusmod tempor incididunt ut labore et dolore magna
+                <br>aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                <br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p></td>
+            </tr>
+        </table>
+        <input type="submit" value="VISIT LIVE SITE">
+    </div>
+    <div class="case_price">
+        <h2>Расчёт стоимости</h2>
+        <form>
+            <h3>ТИП САЙТА</h3>
+            <select>
+            </select>
+        </form>
+    </div>
+    <div class="stat_background">
+        <div class="stat">
+            <div class="chapter"><h2>Немного статистики</h2></div>
+            <table>
+                <tr>
+                    <td><img src="img/smile.png"></td>
+                    <td><img src="img/sign1.png"></td>
+                    <td><img src="img/gal.png"></td>
+                    <td><img src="img/cap.png"></td>
+                </tr>
+                <tr>
+                    <th>120</th>
+                    <th>4,600</th>
+                    <th>340</th>
+                    <th>23</th>
+                </tr>
+                <tr>
+                    <td>счастливых клиентов</td>
+                    <td>часов работы</td>
+                    <td>проектов завершено</td>
+                    <td>наград получено</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    <div class="feedback">
+        <div class="chapter"><h2>Отзывы</h2></div>
+        <img src="img/FeedbackFace.png">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante
+        <br>facilisis bibendum dolor feugiat at duis sed dapidus leo nec ornare diam.</p>
+        Михаил, Ген. директор ПАО "Газпром".
+    </div>
+    <footer>
+        <div class="contacts_background">
+            <div class="contacts">
+                <div class="chapter2"><h2>Мои контакты</h2></div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leo nec ornare diamcoccodo</p>
+            <table>
+                <tr>
+                    <td><img src="img/Geo.png"></td>
+                    <td><img src="img/envelope.png"></td>
+                    <td><img src="img/Phone.png"></td>
+                </tr>
+                <tr>
+                    <td>Санкт-Петербург
+                    <br>Невский проспект 11</td>
+                    <td>info@companyname.com</td>
+                    <td>+7 999 999-99-99</td>
+                </tr>
+            </table>
+            <h4>Оставьте мне сообщение</h4>
+            <form>
+                <input type="text" placeholder="Имя"> <input type="text" placeholder="Email">
+                <br>
+                <textarea placeholder="Сообщение"></textarea>
+                <br>
+                <input type="submit" value="Отправить">
+            </form>
+            <span><a href="http://facebook.com.vn/" target="_blank"><img src="img/fb.png"></a><a href="https://investor.twitterinc.com/" target="_blank"><img src="img/twit.png"></a><a href="https://dribbble.com/" target="_blank"><img src="img/ball.png"></a><a href="https://github.com/" target="_blank"></a><a href="https://www.instagram.com" target="_blank"><img src="img/inst.png"></a><a href="https://ru.linkedin.com/" target="_blank"><img src="img/in.png"></a></span>
+        </div>
+         </div>
+            <div class="map">
+            
+            </div>
+            <div class="end">
+                Copyright © 2021 Андрей Браун. Design by Web
+            </div>
+    </footer>
 </body>
 </html>
