Загрузил на сервер обновленный проект

--- a/src/index.html
+++ b/src/index.html
@@ -41,54 +41,50 @@
     <div class="skills_background">
         <div class="skills">
             <div class="chapter"><h2>Что я умею</h2></div>
-                <table>
-                    <tr>
-                        <td><img src="img/laptop.png"></td>
-                        <td><img src="img/sign.png"></td>
-                        <td><img src="img/rocket.png"></td>
-                        <td><img src="img/Gram.png"></td>
-                    </tr>
-                    <tr>
-                        <td>Веб-дизайн</td>
-                        <td>Разработка</td>
-                        <td>CEO-Оптимизация</td>
-                        <td>Маркетинг</td>
-                    </tr>
-                    <tr>
-                        <td>Lorem ipsum dolor sit amet placerat
-                        <br>facilisis felis mi in tempus eleifend
-                        <br>pellentesque natoque etiam. </td>
-                        <td>Lorem ipsum dolor sit amet placerat
-                        <br>facilisis mi in tempus eleifend 
-                        <br>pellentesque.</td>
-                        <td>Lorem ipsum dolor sit amet placerat
-                        <br>facilisis felis mi in tempus eleifend
-                        <br>pellentesque natoque etiam.</td>
-                        <td>Lorem ipsum dolor sit amet placerat
-                        <br>facilisis felis mi in tempus eleifend
-                        <br>pellentesque natoque .</td>
-                    </tr>
-                </table>
+                <div class="item_skills">
+                    <img src="img/laptop.png">
+                    <h4>Веб-дизайн</h4>
+                    <p>Lorem ipsum dolor sit amet placerat
+                    <br>facilisis felis mi in tempus eleifend
+                    <br>pellentesque natoque etiam. </p>
+                </div>
+                <div class="item_skills">
+                    <img src="img/sign.png">
+                    <h4>Разработка</h4>
+                    <p>Lorem ipsum dolor sit amet placerat
+                    <br>facilisis mi in tempus eleifend 
+                    <br>pellentesque.</p>
+                </div>
+                <div class="item_skills">
+                    <img src="img/rocket.png">
+                    <h4>CEO-Оптимизация</h4>
+                    <p>Lorem ipsum dolor sit amet placerat
+                    <br>facilisis felis mi in tempus eleifend
+                    <br>pellentesque natoque etiam.</p>
+                </div>
+                <div class="item_skills">
+                    <img src="img/Gram.png">
+                    <h4>Маркетинг</h4>
+                    <p>Lorem ipsum dolor sit amet placerat
+                    <br>facilisis felis mi in tempus eleifend
+                    <br>pellentesque natoque .</p>
+                </div>    
         </div>
     </div>
     <div class="case">
         <div class="chapter"><h2>Кейсы</h2></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed Dapibus leo nec ornare diamcoccodo nibh ante facilisis.</p>
         <img src="img/fotka1.jpg">
-        <table>
-            <tr>
-                <td>CLIENT:</td>
-                <td>Название проекта</td>
-            </tr>
-            <tr>
-                <td>Какая-то компания
-                <br>WEBSITE:
-                <br>http://www.somedomain.com</td>
-                <td><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit., sed do eiusmod tempor incididunt ut labore et dolore magna
-                <br>aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                <br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p></td>
-            </tr>
-        </table>
+          <div class="case1">
+              <h4>CLIENT:</h4>
+              Какая-то компания
+              <h4>WEBSITE:</h4>
+              https://www.somedomain.com
+              <h4>Название проекта</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit., sed do eiusmod tempor incididunt ut labore et dolore magna
+              <br>aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              <br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          </div>
         <input type="submit" value="VISIT LIVE SITE">
     </div>
     <div class="case_price">
@@ -96,32 +92,50 @@
         <form>
             <h3>ТИП САЙТА</h3>
             <select>
+                <option selected disabled>Выберите пункт...</option>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+            </select>
+            <h3>ДИЗАЙН</h3>
+            <select>
+                <option selected disabled>Выберите пункт...</option>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+            </select>
+            <h3>АДАПТИВНОСТЬ</h3>
+            <select>
+                <option selected disabled>Выберите пункт...</option>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
             </select>
         </form>
     </div>
     <div class="stat_background">
         <div class="stat">
             <div class="chapter"><h2>Немного статистики</h2></div>
-            <table>
-                <tr>
-                    <td><img src="img/smile.png"></td>
-                    <td><img src="img/sign1.png"></td>
-                    <td><img src="img/gal.png"></td>
-                    <td><img src="img/cap.png"></td>
-                </tr>
-                <tr>
-                    <th>120</th>
-                    <th>4,600</th>
-                    <th>340</th>
-                    <th>23</th>
-                </tr>
-                <tr>
-                    <td>счастливых клиентов</td>
-                    <td>часов работы</td>
-                    <td>проектов завершено</td>
-                    <td>наград получено</td>
-                </tr>
-            </table>
+               <div class="item_stat">
+                   <img src="img/smile.png">
+                   <h4>120</h4>
+                   <p>Счастливых клиентов</p>
+               </div>
+               <div class="item_stat">
+                   <img src="img/sign1.png">
+                   <h4>4,600</h4>
+                   <p>Часов работы</p>
+               </div>
+               <div class="item_stat">
+                   <img src="img/gal.png">
+                   <h4>340</h4>
+                   <p>Проектов завершено</p>
+               </div>
+               <div class="item_stat">
+                   <img src="img/cap.png">
+                   <h4>23</h4>
+                   <p>Наград получено</p>
+               </div>
         </div>
     </div>
     <div class="feedback">
@@ -136,19 +150,19 @@
             <div class="contacts">
                 <div class="chapter2"><h2>Мои контакты</h2></div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leo nec ornare diamcoccodo</p>
-            <table>
-                <tr>
-                    <td><img src="img/Geo.png"></td>
-                    <td><img src="img/envelope.png"></td>
-                    <td><img src="img/Phone.png"></td>
-                </tr>
-                <tr>
-                    <td>Санкт-Петербург
-                    <br>Невский проспект 11</td>
-                    <td>info@companyname.com</td>
-                    <td>+7 999 999-99-99</td>
-                </tr>
-            </table>
+               <div class="item_contacts">
+                   <img src="img/Geo.png">
+                   <h4>Санкт-Петербург
+                   <br>Невский проспект 11</h4>
+               </div>
+               <div class="item_contacts">
+                   <img src="img/envelope.png">
+                   <h4>info@companename.com</h4>
+               </div>
+               <div class="item_contacts">
+                   <img src="img/Phone.png">
+                   <h4>+7 999 999-99-99</h4>
+               </div> 
             <h4>Оставьте мне сообщение</h4>
             <form>
                 <input type="text" placeholder="Имя"> <input type="text" placeholder="Email">
